# py-watersmart

./: .gitignore  README.md  client.py  pyproject.toml
.github/workflows/: ci.yaml  ci.yml  release.yml
watersmart/: __init__.py  usage_data_test.py
