[project]
name = "py-watersmart"
maintainers = [
  {name = "J.C. Jones", email = "jc@insufficient.coffee"},
]
version = "0.0.1"
description = "Obtain water usage data from Watersmart.com"
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
  "Programming Language :: Python :: 3",
]
keywords = ["water meter"]
dependencies = [
  "aiohttp"
]
requires-python = ">=3.11"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
]

[tool.ruff]
line-length = 88  # default is 88
target-version = "py38"

[tool.ruff.lint]
ignore = [
  "ISC001", # Implicit string concatenation can conflict with ruff format
  "S101",   # Allow assert statements
]

[tool.pytest.ini_options]
asyncio_mode = "auto"